# conditional

./: CHANGES.rst  CHANGES.txt  LICENSE  MANIFEST.in  README.rst  README.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
conditional/: __init__.py  conditional.py  conditional.pyi
conditional/examples/: example.py
conditional/tests/: test_conditional.py
docs/: conf.py  index.rst
docs/moved/: index.html
