[metadata]
name = conditional
version = 1.5
description = Conditionally enter a context manager
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
keywords = conditional, context manager, with
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/stefanholek/conditional
project_urls =
    Documentation = https://conditional.readthedocs.io/en/stable/
license = BSD-2-Clause

[options]
packages = find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
exclude =
    conditional.tests

[options.extras_require]
testing =
    flexmock
docs =
    sphinx == 5.3.0
    sphinx-rtd-theme == 1.0.0

[egg_info]
tag_build = dev0

[bdist_wheel]
universal = true

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = true
