[metadata]
name = conditional
version = 2.1
description = Conditionally enter a context manager
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = conditional, context manager, contextmanager, with, async, async with, enter, exit
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/stefanholek/conditional
project_urls =
    Documentation = https://conditional.readthedocs.io/en/stable/
license = BSD-2-Clause

[options]
packages = find:
include_package_data = false
zip_safe = false
python_requires = >=3.5

[options.packages.find]
exclude =
    conditional.examples
    conditional.tests

[options.package_data]
conditional =
    conditional.pyi
    py.typed

[options.extras_require]
testing =
    flexmock
mypy =
    mypy
docs =
    sphinx == 5.3.0
    sphinx-rtd-theme == 1.0.0

[egg_info]
tag_build = dev0

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = true
